cpp code working,
exports to file, then R code reads from file then plots it

--- a/data/compile.ipynb
+++ b/data/compile.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json"
+    "import json, math\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -35,14 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'researchAndDevelopment', 'operatingExpenses', 'fiscalDateEnding', 'accumulatedDepreciationAmortizationPPE', 'shortTermInvestments', 'commonStockSharesOutstanding', 'inventory', 'totalCurrentLiabilities', 'totalRevenue', 'totalShareholderEquity', 'totalNonCurrentAssets', 'grossProfit', 'shortTermDebt', 'currentDebt', 'incomeTaxExpense', 'currentLongTermDebt', 'otherCurrentLiabilities', 'propertyPlantEquipment', 'nonInterestIncome', 'investments', 'totalNonCurrentLiabilities', 'longTermInvestments', 'ebitda', 'netInterestIncome', 'deferredRevenue', 'incomeBeforeTax', 'cashAndCashEquivalentsAtCarryingValue', 'longTermDebtNoncurrent', 'ebit', 'intangibleAssetsExcludingGoodwill', 'cashAndShortTermInvestments', 'reportedCurrency', 'costofGoodsAndServicesSold', 'otherNonOperatingIncome', 'otherCurrentAssets', 'interestIncome', 'otherNonCurrrentAssets', 'capitalLeaseObligations', 'goodwill', 'commonStock', 'depreciationAndAmortization', 'depreciation', 'sellingGeneralAndAdministrative', 'costOfRevenue', 'netIncome', 'otherNonCurrentLiabilities', 'operatingIncome', 'comprehensiveIncomeNetOfTax', 'totalLiabilities', 'longTermDebt', 'treasuryStock', 'interestExpense', 'netIncomeFromContinuingOperations', 'totalCurrentAssets', 'interestAndDebtExpense', 'shortLongTermDebtTotal', 'currentNetReceivables', 'intangibleAssets', 'totalAssets', 'investmentIncomeNet', 'retainedEarnings', 'currentAccountsPayable'}\n"
+      "{'shortTermDebt', 'currentNetReceivables', 'incomeTaxExpense', 'incomeBeforeTax', 'netIncome', 'goodwill', 'longTermInvestments', 'otherCurrentLiabilities', 'totalCurrentAssets', 'researchAndDevelopment', 'totalRevenue', 'totalNonCurrentLiabilities', 'depreciation', 'totalNonCurrentAssets', 'treasuryStock', 'costOfRevenue', 'intangibleAssetsExcludingGoodwill', 'grossProfit', 'comprehensiveIncomeNetOfTax', 'fiscalDateEnding', 'investments', 'totalShareholderEquity', 'shortTermInvestments', 'deferredRevenue', 'retainedEarnings', 'propertyPlantEquipment', 'operatingExpenses', 'depreciationAndAmortization', 'capitalLeaseObligations', 'totalCurrentLiabilities', 'commonStockSharesOutstanding', 'interestAndDebtExpense', 'accumulatedDepreciationAmortizationPPE', 'intangibleAssets', 'ebitda', 'currentAccountsPayable', 'cashAndShortTermInvestments', 'longTermDebtNoncurrent', 'otherCurrentAssets', 'currentLongTermDebt', 'otherNonCurrentLiabilities', 'otherNonCurrrentAssets', 'costofGoodsAndServicesSold', 'nonInterestIncome', 'sellingGeneralAndAdministrative', 'cashAndCashEquivalentsAtCarryingValue', 'shortLongTermDebtTotal', 'interestExpense', 'investmentIncomeNet', 'inventory', 'operatingIncome', 'netIncomeFromContinuingOperations', 'ebit', 'commonStock', 'reportedCurrency', 'totalAssets', 'currentDebt', 'netInterestIncome', 'longTermDebt', 'interestIncome', 'totalLiabilities', 'otherNonOperatingIncome'}\n"
      ]
     }
    ],
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,17 +107,17 @@
     "    ['da', ['totalLiabilities'], ['totalAssets']],\n",
     "    # ['roe', ['netincome'], ['totalShareHolderEquity']],\n",
     "    ['roa', ['netincome'], ['totalAssets']],\n",
-    "    ['net_profit_margin', ['netincome'], ['totalrevenue']],\n",
+    "    # ['net_profit_margin', ['netincome'], ['totalrevenue']],\n",
     "    # ['current_ratio', ['totalCurrentAssets'], ['totalCurrentLiabilities']],\n",
     "    # ['quick_ratio', ['totalcurrentassets', '-inventory'], ['totalcurrentliabilities']],\n",
-    "    ['asset_turnover', ['totalrevenue'], ['totalAssets']],\n",
-    "    ['debt_ratio', ['totalliabilities'], ['totalassets']],\n",
+    "    ['at', ['totalrevenue'], ['totalAssets']],\n",
+    "    # ['debt_ratio', ['totalliabilities'], ['totalassets']],\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,16 +170,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "471 476 479 471 478 482 483 488 \n",
-      "428 {'PEAK', 'LYB', 'EQR', 'CTAS', 'VNO', 'FRT', 'EXPE', 'CMG', 'CTRA', 'UNH', 'TGT', 'MET', 'L', 'SYY', 'GM', 'SNPS', 'AVB', 'PNW', 'NVR', 'AEE', 'NWS', 'PEG', 'STZ', 'TDG', 'GPC', 'ABC', 'RSG', 'ALGN', 'GWW', 'LOW', 'CNP', 'ANTM', 'IT', 'XRAY', 'IR', 'UA', 'TTWO', 'WDC', 'FTV', 'RJF', 'FDS', 'ODFL', 'CVS', 'DAL', 'NDSN', 'NDAQ', 'DFS', 'LRCX', 'CF', 'AIG', 'MPWR', 'ROP', 'WRB', 'CHRW', 'REGN', 'CBRE', 'ROST', 'LLY', 'IEX', 'PKG', 'NKE', 'JBHT', 'OGN', 'WAT', 'KMB', 'PTC', 'CMCSA', 'NLSN', 'NOW', 'EMN', 'SBUX', 'QCOM', 'SYF', 'PCAR', 'MMM', 'NSC', 'ESS', 'DRE', 'MTB', 'GPN', 'PPL', 'SBNY', 'MS', 'NEM', 'MA', 'WBA', 'AJG', 'FFIV', 'STT', 'FAST', 'ABT', 'CBOE', 'USB', 'ALLE', 'FBHS', 'BK', 'BRO', 'GL', 'XEL', 'COF', 'GE', 'CSCO', 'TDY', 'WTW', 'MPC', 'AMT', 'HII', 'D', 'NTAP', 'WFC', 'HPE', 'WHR', 'PHM', 'ITW', 'DGX', 'LEN', 'ROL', 'TECH', 'LYV', 'TRV', 'CEG', 'POOL', 'HLT', 'DVA', 'F', 'MMC', 'URI', 'GLW', 'AAL', 'PEP', 'MCD', 'MNST', 'TYL', 'NLOK', 'UNP', 'SCHW', 'HAL', 'PGR', 'ZBRA', 'COST', 'ICE', 'ILMN', 'AMZN', 'LW', 'KEYS', 'TPR', 'ARE', 'WYNN', 'AON', 'CARR', 'IBM', 'DLR', 'QRVO', 'DVN', 'HD', 'COO', 'EW', 'NTRS', 'OMC', 'ALB', 'VRSN', 'CSX', 'IRM', 'TSLA', 'LDOS', 'OKE', 'BA', 'VMC', 'PPG', 'SNA', 'SHW', 'BKR', 'VFC', 'APTV', 'VLO', 'AMD', 'CAT', 'JCI', 'AWK', 'BIIB', 'RE', 'FMC', 'SYK', 'MRO', 'CDNS', 'WMT', 'LNT', 'K', 'HUM', 'ALL', 'ADBE', 'KR', 'BSX', 'TJX', 'KIM', 'AOS', 'DHI', 'XOM', 'PXD', 'PFE', 'J', 'IQV', 'UHS', 'MKTX', 'HON', 'SBAC', 'GNRC', 'MDLZ', 'PLD', 'DHR', 'EFX', 'MOS', 'INTU', 'JNJ', 'CDW', 'AMP', 'NFLX', 'IFF', 'LVS', 'GOOG', 'KMI', 'UAA', 'NEE', 'CPRT', 'APH', 'KLAC', 'O', 'CCL', 'MAS', 'PVH', 'HSIC', 'JNPR', 'ORCL', 'CFG', 'IPG', 'UAL', 'MTCH', 'FLT', 'PFG', 'HST', 'NWSA', 'DISCA', 'ALK', 'MSCI', 'INTC', 'SEDG', 'TMUS', 'CTSH', 'CAG', 'IP', 'EA', 'AKAM', 'PNR', 'NI', 'PNC', 'SPGI', 'CRM', 'SO', 'RTX', 'ATVI', 'WRK', 'FIS', 'TRMB', 'GD', 'BAX', 'EXR', 'TT', 'EPAM', 'ADM', 'FDX', 'PBCT', 'MLM', 'NCLH', 'ADP', 'FANG', 'MRK', 'KMX', 'CMS', 'AIZ', 'CE', 'IPGP', 'XYL', 'PWR', 'VTR', 'AME', 'SRE', 'MDT', 'GRMN', 'ORLY', 'SLB', 'EIX', 'HES', 'ETR', 'DXCM', 'YUM', 'CRL', 'BLK', 'ACN', 'LUMN', 'CB', 'EOG', 'EXPD', 'CHD', 'RHI', 'ABMD', 'T', 'GS', 'BKNG', 'PSA', 'MO', 'SJM', 'IVZ', 'WMB', 'APA', 'MGM', 'PKI', 'AFL', 'TSCO', 'ETN', 'DOV', 'JKHY', 'WAB', 'INFO', 'LHX', 'ANSS', 'PYPL', 'KEY', 'MAR', 'PRU', 'RCL', 'EMR', 'CNC', 'PAYX', 'C', 'FB', 'BAC', 'HBAN', 'ANET', 'LIN', 'SWKS', 'CZR', 'ETSY', 'DE', 'SIVB', 'BDX', 'HSY', 'LH', 'RF', 'CTLT', 'AMAT', 'PG', 'GOOGL', 'PM', 'MSI', 'KO', 'EBAY', 'UDR', 'FTNT', 'IDXX', 'ISRG', 'DTE', 'VRSK', 'CMA', 'FISV', 'HAS', 'TWTR', 'CAH', 'AAPL', 'CHTR', 'WM', 'NUE', 'COP', 'MKC', 'EL', 'NOC', 'AXP', 'ADSK', 'ECL', 'CTXS', 'EQIX', 'AEP', 'PSX', 'UPS', 'BXP', 'ATO', 'JPM', 'LMT', 'MCO', 'OTIS', 'HCA', 'AES', 'FE', 'ENPH', 'CVX', 'MCHP', 'CMI', 'MTD', 'SPG', 'CL', 'BIO', 'MAA', 'MU', 'PENN', 'HIG', 'PAYC', 'STX', 'BWA', 'REG', 'TFC', 'PH', 'ABBV', 'RL', 'TEL', 'TMO', 'GIS', 'CCI', 'NWL', 'DRI', 'AMGN', 'AZO', 'FITB', 'GILD', 'MCK', 'BLL', 'RMD', 'WEC', 'CLX', 'APD'}\n",
-      "69 {'DXC', 'WY', 'ZBH', 'ZTS', 'AVY', 'TER', 'CME', 'DOW', 'BBWI', 'VZ', 'SEE', 'FOXA', 'HWM', 'SWK', 'CI', 'WELL', 'MHK', 'DIS', 'HOLX', 'TROW', 'DD', 'MSFT', 'AAP', 'TFX', 'KHC', 'CINF', 'CTVA', 'EXC', 'FCX', 'HPQ', 'NRG', 'V', 'TXT', 'DISH', 'HRL', 'VTRS', 'FOX', 'BMY', 'BR', 'LUV', 'TSN', 'WST', 'CDAY', 'DPZ', 'VRTX', 'MRNA', 'DISCK', 'ES', 'ED', 'A', 'CERN', 'NVDA', 'AMCR', 'OXY', 'TAP', 'NXPI', 'ROK', 'DUK', 'LKQ', 'BEN', 'STE', 'FRC', 'LNC', 'EVRG', 'ADI', 'INCY', 'TXN', 'ZION', 'BBY'}\n"
+      "471 476 479 471 478 482 483 488 490 489 490 490 \n",
+      "416 {'LOW', 'MTB', 'BRO', 'K', 'UAA', 'CNC', 'OTIS', 'FTV', 'ADSK', 'MAA', 'ADM', 'FBHS', 'CHTR', 'ADP', 'XOM', 'TGT', 'ABT', 'MU', 'PNR', 'ATVI', 'ILMN', 'J', 'MMM', 'ANTM', 'IPG', 'NVR', 'CL', 'MAR', 'ITW', 'PPG', 'FDS', 'JPM', 'ROST', 'UNH', 'VLO', 'SRE', 'AES', 'ICE', 'ROP', 'KMX', 'MCHP', 'MDT', 'ECL', 'AMD', 'NDSN', 'GE', 'GM', 'SPG', 'DTE', 'EIX', 'AAPL', 'SO', 'JBHT', 'AIG', 'MO', 'ETN', 'WMT', 'AMP', 'PEG', 'PFG', 'APH', 'VRSK', 'EOG', 'MAS', 'ETR', 'IFF', 'ALB', 'CHD', 'TSLA', 'NI', 'TEL', 'NCLH', 'CAH', 'NWS', 'AXP', 'HAL', 'BXP', 'CRL', 'HES', 'BK', 'TFC', 'AEE', 'NFLX', 'IEX', 'IQV', 'GILD', 'SNA', 'VNO', 'VRSN', 'HBAN', 'NWSA', 'BIIB', 'APA', 'HON', 'ANSS', 'PNC', 'MKTX', 'KLAC', 'MTD', 'RMD', 'PSX', 'RE', 'UHS', 'ZBRA', 'BSX', 'DVA', 'EXPE', 'WEC', 'CCI', 'WAT', 'ROL', 'NWL', 'CPRT', 'DFS', 'NUE', 'FAST', 'MA', 'PEAK', 'IP', 'KR', 'CRM', 'DLR', 'GNRC', 'NLSN', 'MDLZ', 'PAYX', 'MCK', 'AKAM', 'CHRW', 'FRT', 'RJF', 'CLX', 'EBAY', 'GRMN', 'CMS', 'MTCH', 'INTC', 'HPE', 'AMAT', 'EMN', 'LNT', 'LRCX', 'EQR', 'CDNS', 'BKNG', 'HCA', 'IBM', 'DVN', 'COO', 'NLOK', 'XEL', 'KEYS', 'OGN', 'DISCA', 'TSCO', 'SIVB', 'TPR', 'IRM', 'VFC', 'L', 'RHI', 'SEDG', 'GLW', 'GD', 'AFL', 'SYK', 'MCO', 'PHM', 'KMI', 'PBCT', 'TRMB', 'ABBV', 'GL', 'GS', 'PH', 'CSX', 'AAL', 'PVH', 'T', 'CBRE', 'MNST', 'WAB', 'CMI', 'SCHW', 'UAL', 'CF', 'NSC', 'SBAC', 'WHR', 'CSCO', 'CTSH', 'QCOM', 'RCL', 'APD', 'HII', 'EPAM', 'BWA', 'MET', 'CE', 'PXD', 'UNP', 'CVX', 'XRAY', 'INTU', 'AON', 'CMCSA', 'CMA', 'PG', 'MRO', 'LH', 'NDAQ', 'CDW', 'PEP', 'FTNT', 'GOOGL', 'DRE', 'PTC', 'PM', 'TDY', 'TDG', 'NOW', 'DRI', 'APTV', 'AOS', 'CTRA', 'NOC', 'DE', 'MOS', 'NTRS', 'ORLY', 'AWK', 'ADBE', 'AME', 'PGR', 'BLL', 'URI', 'UPS', 'REGN', 'WYNN', 'BKR', 'ALL', 'C', 'TTWO', 'POOL', 'COST', 'IDXX', 'MKC', 'WBA', 'KO', 'PWR', 'CMG', 'RSG', 'JKHY', 'BDX', 'HAS', 'SYF', 'SHW', 'PLD', 'SLB', 'TRV', 'FE', 'MRK', 'KIM', 'WM', 'FFIV', 'MMC', 'FITB', 'FMC', 'JCI', 'MCD', 'IR', 'TYL', 'GOOG', 'BAX', 'BLK', 'HIG', 'PKI', 'ENPH', 'QRVO', 'HD', 'MPC', 'CZR', 'EW', 'CCL', 'STT', 'ANET', 'COF', 'NKE', 'JNJ', 'NEE', 'BAC', 'LEN', 'CTAS', 'WMB', 'NTAP', 'HSY', 'WRB', 'AJG', 'KEY', 'TMUS', 'RF', 'AMZN', 'ALLE', 'SBNY', 'FIS', 'DXCM', 'CB', 'USB', 'PAYC', 'TT', 'CTXS', 'BIO', 'SPGI', 'ETSY', 'MS', 'F', 'LDOS', 'EMR', 'PPL', 'OKE', 'ACN', 'EXR', 'FANG', 'RL', 'DGX', 'NEM', 'ABC', 'TMO', 'UDR', 'FB', 'O', 'COP', 'IT', 'TECH', 'LLY', 'YUM', 'SBUX', 'PSA', 'MGM', 'MSCI', 'LYV', 'IPGP', 'PRU', 'FDX', 'DHR', 'HST', 'SNPS', 'WTW', 'PYPL', 'STZ', 'EL', 'CNP', 'MSI', 'ARE', 'XYL', 'CAG', 'MLM', 'LHX', 'REG', 'PCAR', 'WDC', 'BA', 'RTX', 'PENN', 'KMB', 'LVS', 'GIS', 'CARR', 'STX', 'SYY', 'CVS', 'AZO', 'ALGN', 'CFG', 'PNW', 'DOV', 'EXPD', 'MPWR', 'ESS', 'DHI', 'GPC', 'AMGN', 'ISRG', 'LIN', 'ATO', 'LUMN', 'WFC', 'VTR', 'OMC', 'CTLT', 'IVZ', 'LMT', 'UA', 'SJM', 'AIZ', 'ALK', 'EQIX', 'WRK', 'FLT', 'JNPR', 'CEG', 'AVB', 'GWW', 'HSIC', 'AMT', 'D', 'AEP', 'EA', 'GPN', 'CBOE', 'EFX', 'ABMD', 'HLT', 'INFO', 'LYB', 'ORCL'}\n",
+      "80 {'VMC', 'HUM', 'TAP', 'WELL', 'KHC', 'BBWI', 'NVDA', 'HOLX', 'CTVA', 'INCY', 'TXT', 'LW', 'DISH', 'BR', 'ADI', 'DOW', 'DISCK', 'V', 'BMY', 'CERN', 'ES', 'CDAY', 'PFE', 'LUV', 'LKQ', 'FISV', 'TXN', 'WST', 'NXPI', 'AMCR', 'CI', 'DXC', 'BBY', 'TFX', 'MRNA', 'CAT', 'CME', 'PKG', 'DPZ', 'AAP', 'FOXA', 'STE', 'DD', 'VZ', 'FOX', 'ED', 'HPQ', 'NRG', 'SEE', 'ZION', 'TSN', 'ZTS', 'TJX', 'DAL', 'DUK', 'MSFT', 'ODFL', 'SWK', 'A', 'FCX', 'VRTX', 'FRC', 'BEN', 'EVRG', 'OXY', 'HWM', 'CINF', 'ROK', 'AVY', 'TER', 'DIS', 'LNC', 'WY', 'HRL', 'SWKS', 'EXC', 'ZBH', 'VTRS', 'MHK', 'TROW'}\n"
      ]
     }
    ],
@@ -186,7 +187,7 @@
     "tickerset = set(ticker)\n",
     "badtickerset = set()\n",
     "year_start = 2017\n",
-    "year_end = 2019\n",
+    "year_end = 2020\n",
     "for year in range(year_start, year_end):\n",
     "    for qtr in range(1, 5):\n",
     "        period = f'{year}_Q{qtr}'\n",
@@ -210,13 +211,14 @@
     "                cool += 1\n",
     "        print(cool,end=' ')\n",
     "print()\n",
+    "tickerset.remove(\"TWTR\")\n",
     "print(len(tickerset), tickerset)\n",
     "print(len(badtickerset), badtickerset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +239,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for year in range(year_start, year_end):\n",
+    "    for qtr in range(1, 5):\n",
+    "        period = f'{year}_Q{qtr}'\n",
+    "        period_file = open(f'../data/QuarterlyRatiosClean/{period}.csv', 'r')\n",
+    "        header = period_file.readline()\n",
+    "        lines = period_file.readlines()\n",
+    "        period_file.close()\n",
+    "        period_file = open(f'../data/QuarterlyRatiosCleanNormalised/{period}.csv', 'w')\n",
+    "        period_file.write(header)\n",
+    "        avg = [0 for _ in range(len(lines[0].strip().split(','))-1)]\n",
+    "        stddev = [0 for _ in range(len(lines[0].strip().split(','))-1)]\n",
+    "        for line in lines:\n",
+    "            line = line.strip().split(',')\n",
+    "            for i in range(len(line)-1):\n",
+    "                avg[i] += float(line[i+1])\n",
+    "        for i in range(len(avg)):\n",
+    "            avg[i] /= len(lines)\n",
+    "        for line in lines:\n",
+    "            line = line.strip().split(',')\n",
+    "            for i in range(len(line)-1):\n",
+    "                stddev[i] += (float(line[i+1]) - avg[i])**2\n",
+    "        for i in range(len(stddev)):\n",
+    "            stddev[i] = math.sqrt(stddev[i] / len(lines))\n",
+    "        \n",
+    "        for line in lines:\n",
+    "            line = line.strip().split(',')\n",
+    "            to_write = [line[0]]\n",
+    "            for i in range(len(line)-1):\n",
+    "                # append if data is within 3 std deviations\n",
+    "                if abs(float(line[i+1]) - avg[i]) < 3 * stddev[i]:\n",
+    "                    to_write.append(str(float((float(line[i+1]) - avg[i])/stddev[i])))\n",
+    "            if len(to_write) == len(line):\n",
+    "                period_file.write(','.join(to_write) + '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": []
