Added S&P 500 Index to eval

--- a/MeanVariance/mpt.ipynb
+++ b/MeanVariance/mpt.ipynb
@@ -2,9 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              sp500\n",
+      "DATE               \n",
+      "2015-01-01      NaN\n",
+      "2015-01-02  2058.20\n",
+      "2015-01-05  2020.58\n",
+      "2015-01-06  2002.61\n",
+      "2015-01-07  2025.90\n",
+      "...             ...\n",
+      "2020-06-01  3055.73\n",
+      "2020-06-02  3080.82\n",
+      "2020-06-03  3122.87\n",
+      "2020-06-04  3112.35\n",
+      "2020-06-05  3193.93\n",
+      "\n",
+      "[1417 rows x 1 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -324,10 +346,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              sp500\n",
+      "DATE               \n",
+      "2015-01-02  2058.20\n",
+      "2015-01-05  2020.58\n",
+      "2015-01-06  2002.61\n",
+      "2015-01-07  2025.90\n",
+      "2015-01-08  2062.14\n"
+     ]
+    }
+   ],
+   "source": [
+    "sp500_df = web.DataReader('sp500', start ='2015-01-02', end = '2020-06-06', data_source='fred')\n",
+    "print(sp500_df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sp500    2058.2\n",
+       "Name: 2015-01-02 00:00:00, dtype: float64"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sp500_df.loc['2015-01-02']"
+   ]
   },
   {
    "cell_type": "code",
