Corrections in eval script

--- a/MeanVariance/mpt.ipynb
+++ b/MeanVariance/mpt.ipynb
@@ -2,31 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              sp500\n",
-      "DATE               \n",
-      "2015-01-01      NaN\n",
-      "2015-01-02  2058.20\n",
-      "2015-01-05  2020.58\n",
-      "2015-01-06  2002.61\n",
-      "2015-01-07  2025.90\n",
-      "...             ...\n",
-      "2020-06-01  3055.73\n",
-      "2020-06-02  3080.82\n",
-      "2020-06-03  3122.87\n",
-      "2020-06-04  3112.35\n",
-      "2020-06-05  3193.93\n",
-      "\n",
-      "[1417 rows x 1 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -44,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -89,19 +67,19 @@
        "    <tr>\n",
        "      <th>2014-12-31</th>\n",
        "      <td>13.250000</td>\n",
-       "      <td>10.683700</td>\n",
+       "      <td>10.683703</td>\n",
        "      <td>150.149994</td>\n",
-       "      <td>38.254536</td>\n",
-       "      <td>97.376846</td>\n",
+       "      <td>38.254539</td>\n",
+       "      <td>97.376854</td>\n",
        "      <td>179.880402</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015-01-02</th>\n",
        "      <td>13.220000</td>\n",
-       "      <td>10.629392</td>\n",
+       "      <td>10.629391</td>\n",
        "      <td>149.169998</td>\n",
-       "      <td>38.497959</td>\n",
-       "      <td>97.084496</td>\n",
+       "      <td>38.497971</td>\n",
+       "      <td>97.084511</td>\n",
        "      <td>179.784119</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -109,26 +87,26 @@
        "      <td>13.810000</td>\n",
        "      <td>10.326804</td>\n",
        "      <td>147.000000</td>\n",
-       "      <td>37.947994</td>\n",
+       "      <td>37.947998</td>\n",
        "      <td>95.660385</td>\n",
-       "      <td>176.537277</td>\n",
+       "      <td>176.537262</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015-01-06</th>\n",
        "      <td>13.700000</td>\n",
-       "      <td>10.094044</td>\n",
+       "      <td>10.094043</td>\n",
        "      <td>146.839996</td>\n",
-       "      <td>38.146351</td>\n",
-       "      <td>94.377731</td>\n",
-       "      <td>174.874512</td>\n",
+       "      <td>38.146336</td>\n",
+       "      <td>94.377747</td>\n",
+       "      <td>174.874481</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015-01-07</th>\n",
        "      <td>14.030000</td>\n",
-       "      <td>10.109560</td>\n",
+       "      <td>10.109558</td>\n",
        "      <td>148.880005</td>\n",
-       "      <td>38.200439</td>\n",
-       "      <td>95.594337</td>\n",
+       "      <td>38.200447</td>\n",
+       "      <td>95.594391</td>\n",
        "      <td>177.053650</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -145,26 +123,26 @@
        "      <td>37.500000</td>\n",
        "      <td>11.960445</td>\n",
        "      <td>183.839996</td>\n",
-       "      <td>31.503242</td>\n",
-       "      <td>231.826096</td>\n",
-       "      <td>296.821289</td>\n",
+       "      <td>31.503244</td>\n",
+       "      <td>231.826080</td>\n",
+       "      <td>296.821350</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-06-02</th>\n",
        "      <td>37.540001</td>\n",
-       "      <td>12.494140</td>\n",
+       "      <td>12.494139</td>\n",
        "      <td>185.940002</td>\n",
-       "      <td>31.522673</td>\n",
-       "      <td>233.381119</td>\n",
-       "      <td>299.278992</td>\n",
+       "      <td>31.522675</td>\n",
+       "      <td>233.381104</td>\n",
+       "      <td>299.279053</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-06-03</th>\n",
        "      <td>37.910000</td>\n",
-       "      <td>12.989712</td>\n",
+       "      <td>12.989711</td>\n",
        "      <td>190.820007</td>\n",
-       "      <td>32.659241</td>\n",
-       "      <td>234.431000</td>\n",
+       "      <td>32.659233</td>\n",
+       "      <td>234.431015</td>\n",
        "      <td>303.261932</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -173,17 +151,17 @@
        "      <td>13.189846</td>\n",
        "      <td>192.050003</td>\n",
        "      <td>33.030140</td>\n",
-       "      <td>232.786850</td>\n",
-       "      <td>302.465302</td>\n",
+       "      <td>232.786835</td>\n",
+       "      <td>302.465363</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-06-05</th>\n",
        "      <td>38.830002</td>\n",
-       "      <td>13.628237</td>\n",
+       "      <td>13.628238</td>\n",
        "      <td>200.660004</td>\n",
        "      <td>34.289272</td>\n",
-       "      <td>237.402374</td>\n",
-       "      <td>310.217407</td>\n",
+       "      <td>237.402359</td>\n",
+       "      <td>310.217377</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -193,36 +171,36 @@
       "text/plain": [
        "                  BSX        AES       BRK-B        SEE         QQQ  \\\n",
        "Date                                                                  \n",
-       "2014-12-31  13.250000  10.683700  150.149994  38.254536   97.376846   \n",
-       "2015-01-02  13.220000  10.629392  149.169998  38.497959   97.084496   \n",
-       "2015-01-05  13.810000  10.326804  147.000000  37.947994   95.660385   \n",
-       "2015-01-06  13.700000  10.094044  146.839996  38.146351   94.377731   \n",
-       "2015-01-07  14.030000  10.109560  148.880005  38.200439   95.594337   \n",
+       "2014-12-31  13.250000  10.683703  150.149994  38.254539   97.376854   \n",
+       "2015-01-02  13.220000  10.629391  149.169998  38.497971   97.084511   \n",
+       "2015-01-05  13.810000  10.326804  147.000000  37.947998   95.660385   \n",
+       "2015-01-06  13.700000  10.094043  146.839996  38.146336   94.377747   \n",
+       "2015-01-07  14.030000  10.109558  148.880005  38.200447   95.594391   \n",
        "...               ...        ...         ...        ...         ...   \n",
-       "2020-06-01  37.500000  11.960445  183.839996  31.503242  231.826096   \n",
-       "2020-06-02  37.540001  12.494140  185.940002  31.522673  233.381119   \n",
-       "2020-06-03  37.910000  12.989712  190.820007  32.659241  234.431000   \n",
-       "2020-06-04  37.419998  13.189846  192.050003  33.030140  232.786850   \n",
-       "2020-06-05  38.830002  13.628237  200.660004  34.289272  237.402374   \n",
+       "2020-06-01  37.500000  11.960445  183.839996  31.503244  231.826080   \n",
+       "2020-06-02  37.540001  12.494139  185.940002  31.522675  233.381104   \n",
+       "2020-06-03  37.910000  12.989711  190.820007  32.659233  234.431015   \n",
+       "2020-06-04  37.419998  13.189846  192.050003  33.030140  232.786835   \n",
+       "2020-06-05  38.830002  13.628238  200.660004  34.289272  237.402359   \n",
        "\n",
        "                   SPY  \n",
        "Date                    \n",
        "2014-12-31  179.880402  \n",
        "2015-01-02  179.784119  \n",
-       "2015-01-05  176.537277  \n",
-       "2015-01-06  174.874512  \n",
+       "2015-01-05  176.537262  \n",
+       "2015-01-06  174.874481  \n",
        "2015-01-07  177.053650  \n",
        "...                ...  \n",
-       "2020-06-01  296.821289  \n",
-       "2020-06-02  299.278992  \n",
+       "2020-06-01  296.821350  \n",
+       "2020-06-02  299.279053  \n",
        "2020-06-03  303.261932  \n",
-       "2020-06-04  302.465302  \n",
-       "2020-06-05  310.217407  \n",
+       "2020-06-04  302.465363  \n",
+       "2020-06-05  310.217377  \n",
        "\n",
        "[1367 rows x 6 columns]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -303,15 +281,46 @@
      "output_type": "stream",
      "text": [
       "BSX       38.830002\n",
-      "AES       13.628237\n",
+      "AES       13.628238\n",
       "BRK-B    200.660004\n",
       "SEE       34.289272\n",
-      "QQQ      237.402374\n",
-      "SPY      310.217407\n",
+      "QQQ      237.402359\n",
+      "SPY      310.217377\n",
+      "Name: 2020-06-05 00:00:00, dtype: float64\n",
+      "{'BSX': 0.0, 'AES': 0.0, 'BRK-B': 3.9933219643975795, 'SEE': 15.284663823920784, 'QQQ': 0.0, 'SPY': 27.96297258402021}\n"
+     ]
+    }
+   ],
+   "source": [
+    "latest_prices = df_stocks.loc[df_stocks.index.max()]\n",
+    "print(latest_prices)\n",
+    "\n",
+    "allocation = {}\n",
+    "AMOUNT = 10000\n",
+    "for idx, wt in sharpe_pwt.items():\n",
+    "    allocation[idx] = (wt * AMOUNT) / latest_prices[idx]\n",
+    "print(allocation)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BSX       38.830002\n",
+      "AES       13.628238\n",
+      "BRK-B    200.660004\n",
+      "SEE       34.289272\n",
+      "QQQ      237.402359\n",
+      "SPY      310.217377\n",
       "Name: 2020-06-05 00:00:00, dtype: float64\n",
       "{'BRK-B': 4, 'SEE': 14, 'SPY': 28}Long-step dual simplex will be used\n",
       "\n",
-      "31.22277069091797\n"
+      "31.22362518310547\n"
      ]
     }
    ],
@@ -416,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
