Added Mean var for all

--- a/MeanVariance/mpt.ipynb
+++ b/MeanVariance/mpt.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -69,45 +69,45 @@
        "      <td>13.250000</td>\n",
        "      <td>10.683703</td>\n",
        "      <td>150.149994</td>\n",
-       "      <td>38.254539</td>\n",
+       "      <td>38.254543</td>\n",
        "      <td>97.376854</td>\n",
-       "      <td>179.880402</td>\n",
+       "      <td>179.880341</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015-01-02</th>\n",
        "      <td>13.220000</td>\n",
-       "      <td>10.629391</td>\n",
+       "      <td>10.629394</td>\n",
        "      <td>149.169998</td>\n",
-       "      <td>38.497971</td>\n",
-       "      <td>97.084511</td>\n",
-       "      <td>179.784119</td>\n",
+       "      <td>38.497959</td>\n",
+       "      <td>97.084473</td>\n",
+       "      <td>179.784088</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015-01-05</th>\n",
        "      <td>13.810000</td>\n",
-       "      <td>10.326804</td>\n",
+       "      <td>10.326805</td>\n",
        "      <td>147.000000</td>\n",
-       "      <td>37.947998</td>\n",
+       "      <td>37.947994</td>\n",
        "      <td>95.660385</td>\n",
-       "      <td>176.537262</td>\n",
+       "      <td>176.537292</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015-01-06</th>\n",
        "      <td>13.700000</td>\n",
        "      <td>10.094043</td>\n",
        "      <td>146.839996</td>\n",
-       "      <td>38.146336</td>\n",
-       "      <td>94.377747</td>\n",
-       "      <td>174.874481</td>\n",
+       "      <td>38.146347</td>\n",
+       "      <td>94.377739</td>\n",
+       "      <td>174.874466</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015-01-07</th>\n",
        "      <td>14.030000</td>\n",
-       "      <td>10.109558</td>\n",
+       "      <td>10.109561</td>\n",
        "      <td>148.880005</td>\n",
-       "      <td>38.200447</td>\n",
-       "      <td>95.594391</td>\n",
-       "      <td>177.053650</td>\n",
+       "      <td>38.200424</td>\n",
+       "      <td>95.594360</td>\n",
+       "      <td>177.053635</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -124,33 +124,33 @@
        "      <td>11.960445</td>\n",
        "      <td>183.839996</td>\n",
        "      <td>31.503244</td>\n",
-       "      <td>231.826080</td>\n",
-       "      <td>296.821350</td>\n",
+       "      <td>231.826111</td>\n",
+       "      <td>296.821320</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-06-02</th>\n",
        "      <td>37.540001</td>\n",
        "      <td>12.494139</td>\n",
        "      <td>185.940002</td>\n",
-       "      <td>31.522675</td>\n",
-       "      <td>233.381104</td>\n",
+       "      <td>31.522676</td>\n",
+       "      <td>233.381119</td>\n",
        "      <td>299.279053</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-06-03</th>\n",
        "      <td>37.910000</td>\n",
-       "      <td>12.989711</td>\n",
+       "      <td>12.989712</td>\n",
        "      <td>190.820007</td>\n",
        "      <td>32.659233</td>\n",
-       "      <td>234.431015</td>\n",
-       "      <td>303.261932</td>\n",
+       "      <td>234.431000</td>\n",
+       "      <td>303.261902</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-06-04</th>\n",
        "      <td>37.419998</td>\n",
-       "      <td>13.189846</td>\n",
+       "      <td>13.189847</td>\n",
        "      <td>192.050003</td>\n",
-       "      <td>33.030140</td>\n",
+       "      <td>33.030144</td>\n",
        "      <td>232.786835</td>\n",
        "      <td>302.465363</td>\n",
        "    </tr>\n",
@@ -159,9 +159,9 @@
        "      <td>38.830002</td>\n",
        "      <td>13.628238</td>\n",
        "      <td>200.660004</td>\n",
-       "      <td>34.289272</td>\n",
+       "      <td>34.289265</td>\n",
        "      <td>237.402359</td>\n",
-       "      <td>310.217377</td>\n",
+       "      <td>310.217407</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -171,36 +171,36 @@
       "text/plain": [
        "                  BSX        AES       BRK-B        SEE         QQQ  \\\n",
        "Date                                                                  \n",
-       "2014-12-31  13.250000  10.683703  150.149994  38.254539   97.376854   \n",
-       "2015-01-02  13.220000  10.629391  149.169998  38.497971   97.084511   \n",
-       "2015-01-05  13.810000  10.326804  147.000000  37.947998   95.660385   \n",
-       "2015-01-06  13.700000  10.094043  146.839996  38.146336   94.377747   \n",
-       "2015-01-07  14.030000  10.109558  148.880005  38.200447   95.594391   \n",
+       "2014-12-31  13.250000  10.683703  150.149994  38.254543   97.376854   \n",
+       "2015-01-02  13.220000  10.629394  149.169998  38.497959   97.084473   \n",
+       "2015-01-05  13.810000  10.326805  147.000000  37.947994   95.660385   \n",
+       "2015-01-06  13.700000  10.094043  146.839996  38.146347   94.377739   \n",
+       "2015-01-07  14.030000  10.109561  148.880005  38.200424   95.594360   \n",
        "...               ...        ...         ...        ...         ...   \n",
-       "2020-06-01  37.500000  11.960445  183.839996  31.503244  231.826080   \n",
-       "2020-06-02  37.540001  12.494139  185.940002  31.522675  233.381104   \n",
-       "2020-06-03  37.910000  12.989711  190.820007  32.659233  234.431015   \n",
-       "2020-06-04  37.419998  13.189846  192.050003  33.030140  232.786835   \n",
-       "2020-06-05  38.830002  13.628238  200.660004  34.289272  237.402359   \n",
+       "2020-06-01  37.500000  11.960445  183.839996  31.503244  231.826111   \n",
+       "2020-06-02  37.540001  12.494139  185.940002  31.522676  233.381119   \n",
+       "2020-06-03  37.910000  12.989712  190.820007  32.659233  234.431000   \n",
+       "2020-06-04  37.419998  13.189847  192.050003  33.030144  232.786835   \n",
+       "2020-06-05  38.830002  13.628238  200.660004  34.289265  237.402359   \n",
        "\n",
        "                   SPY  \n",
        "Date                    \n",
-       "2014-12-31  179.880402  \n",
-       "2015-01-02  179.784119  \n",
-       "2015-01-05  176.537262  \n",
-       "2015-01-06  174.874481  \n",
-       "2015-01-07  177.053650  \n",
+       "2014-12-31  179.880341  \n",
+       "2015-01-02  179.784088  \n",
+       "2015-01-05  176.537292  \n",
+       "2015-01-06  174.874466  \n",
+       "2015-01-07  177.053635  \n",
        "...                ...  \n",
-       "2020-06-01  296.821350  \n",
+       "2020-06-01  296.821320  \n",
        "2020-06-02  299.279053  \n",
-       "2020-06-03  303.261932  \n",
+       "2020-06-03  303.261902  \n",
        "2020-06-04  302.465363  \n",
-       "2020-06-05  310.217377  \n",
+       "2020-06-05  310.217407  \n",
        "\n",
        "[1367 rows x 6 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
    ],
    "source": [
     "ef = EfficientFrontier(mu, Sigma, weight_bounds=(0,1))\n",
-    "sharpe_pfolio=ef.min_volatility()\n",
+    "ef.min_volatility()\n",
     "sharpe_pwt=ef.clean_weights()\n",
     "print(sharpe_pwt)"
    ]
